--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body {font-size:16px;}
     </p>
     <p>Call or send us an email to request an estimate or for general questions about 
         Certified Contractors and our services. We look forward to serving you!<br>
-        <br>Email : Senwedikitso@gamil.com
+        <br>Email : lupfumorambau02.@icloud.com
         <br>Phone : 066 234 1166</p>
      
   </div>
